Mon Apr 26 16:46:59 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* ext/extmk.rb.in: AIX shared library support modified.

	* ext/aix_mksym.rb: ditto.

	* configure.in: ditto.

	* sprintf.c (rb_f_sprintf): should allocate proper sized buffer
	  for float numbers.

Sat Apr 24 00:00:16 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* parse.y (operation): syntax like `a.[]=(1,2)' is allowed.

Fri Apr 23 23:54:09 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* io.c (argf_binmode): binmode method added to ARGF.

Fri Apr 23 13:55:22 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* string.c (rb_f_chomp): should assign the result to $_.  or maybe
	  sub/gsub/chop/chomp should NOT assign $_ altogether.

Thu Apr 22 16:50:54 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* eval.c (rb_callcc): call scope_dup() for all scopes in
	  the interpreter stack.

Tue Apr 20 11:24:18 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* string.c (rb_str_dump): `#' should be escaped.

Tue Apr 20 02:32:42 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* parse.y (parse_regx): option /p for posix match added.

	* re.c (rb_reg_desc): did not print options properly.

	* io.c (rb_file_s_open): intialize was called twice.

Mon Apr 19 18:56:21 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* configure.in (DEFAULT_KCODE): can specify default code for
	  $KCODE by --with-default-kcode=(euc|sjis|utf8|none).

	* regex.c (IS_A_LETTER): a byte sequence shorter than mbc should
	  not match with \w etc.

Mon Apr 19 13:49:11 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* eval.c (eval): should restore ruby_dyna_vars.

Fri Apr 16 21:40:43 1999  Nobuetsu Nokada  <gea02117@nifty.ne.jp>

	* io.c (f_backquote): pipe_open may return nil.

	* io.c (f_open): rb_io_open may return nil.

	* io.c (io_s_foreach): ditto.

	* io.c (io_s_readlines): ditto.

	* io.c (io_defset): wrong message.

Fri Apr 16 15:09:20 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>
