@@ -69,7 +69,7 @@ AC_ARG_ENABLE(fat-binary,
         ARCH_FLAG="$ARCH_FLAG -arch $archs "
         echo -n " $archs"
     done
-    AC_DEFINE( NEXT_FAT_BINARY )
+    AC_DEFINE(NEXT_FAT_BINARY)
     echo "."
 fi 
 
@@ -717,6 +717,9 @@ AC_DEFINE_UNQUOTED(RUBY_LIB, "${RUBY_LIB_PATH}")
 RUBY_SITE_LIB_PATH="${RUBY_LIB_PATH}/site_ruby"
 AC_DEFINE_UNQUOTED(RUBY_SITE_LIB, "${RUBY_SITE_LIB_PATH}")
 AC_SUBST(arch)dnl
+
+configure_args=$ac_configure_args
+AC_SUBST(configure_args)dnl
 
 if test "$fat_binary" = yes ; then
     arch="fat-${host_os}"
