@@ -242,6 +242,29 @@ def have_header(header)
   return TRUE
 end
 
+def arg_config(config, default=nil)
+  unless defined? $configure_args
+    $configure_args = {}
+    for arg in CONFIG["configure_args"].split
+      next unless /^--/ =~ arg
+      if /=/ =~ arg
+	$configure_args[$`] = $'
+      else
+	$configure_args[arg] = default
+      end
+    end
+  end
+  p [$configure_args, config]
+  $configure_args.fetch(config, default)
+end
+
+def with_config(config, default=nil)
+  unless /^--with-/ =~ config
+    config = '--with-' + config
+  end
+  arg_config(config, default)
+end
+
 def create_header()
   if $defs.length > 0
     hfile = open("extconf.h", "w")
